<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_user">Hello User</string>
    <string name="welcome_text">Welcome to my shoe store</string>
    <string name="instructions_button_text">Go to Instructions</string>
    <string name="instruction_title">Instructions</string>
    <string name="instruction_text">This app contains a list of shoes</string>
    <string name="go_to_store_button">Go To Store</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_log_out">Log out</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_shoe">Create new shoe</string>
    <string name="action_add">Add Shoe</string>
    <string name="shoeName">Name</string>
    <string name="shoeCompany">Company</string>
    <string name="shoeDescription">Description</string>
    <string name="shoeSize">Size</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>