<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <Button
            android:id="@+id/button_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:layout_marginRight="@dimen/fragment_horizontal_margin" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/fragment_vertical_margin"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>